feat(entry): implemented entry success page, and integrated it and auth pages with mock api
